# prime-finder

./: .gitignore  CMakeLists.txt  README.md  main.c  primes.c  primes.h
